--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Covid-19 Vaccine Availability Finder</title>
+        <title>Covid-19 Vaccine Availability Notifier</title>
         <meta charset="UTF-8">
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta name="description" content="Covid-19 Vaccine Availability Finder">
+        <meta name="description" content="Covid-19 Vaccine Availability Notifier">
         <meta name="keywords" content="covid, vaccine, vaccineavailability,Codeuniq, codeuniq, code uniq">
         <meta name="author" content="Sherin K R">
         <link href="files/favicon.png" rel="icon">
@@ -19,7 +19,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand">Covid-19 Vaccine Availability Finder</a>
+            <a class="navbar-brand">Covid-19 Vaccine Availability Notifier</a>
         </nav>
         <div class="container mb-5">
             <div>
