Updated with reg link

--- a/index.html
+++ b/index.html
@@ -51,9 +51,7 @@
         </div>
         <footer class="footers">
             <div class="container">
-                <span class="text-muted"><span style="color:red">&#10084;</span>
-                © Copyright <strong><a href="https://codeuniq.team/">Team Codeuniq</a></strong>.
-                All Rights Reserved
+                <span class="text-muted">Powered By <strong><a href="https://codeuniq.team/">Team Codeuniq</a></strong>.
                 </span></br>
             </div>
         </footer>
