Updated with reg link

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <meta name="author" content="Sherin K R">
         <link href="files/favicon.png" rel="icon">
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script type="text/javascript" src="script.js"></script>
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-XLFH7YHQ85"></script>
@@ -51,9 +52,12 @@
         </div>
         <footer class="footers">
             <div class="container">
-                <span class="text-muted">Powered By <strong><a href="https://codeuniq.team/">Team Codeuniq</a></strong>.
+                <span class="text-muted">Powered By <strong><a href="https://codeuniq.team/">Team Codeuniq</a></strong>
+                    <a href="https://www.instagram.com/codeuniq_" class="social"><i class="fa fa-instagram"></i></a>
+                    <a href="https://www.youtube.com/c/codeuniq" class="social"><i class="fa fa-youtube"></i></a>
+                    <a href="https://www.facebook.com/codeuniqproject/" class="social"><i class="fa fa-facebook"></i></a>
                 </span></br>
             </div>
-        </footer>
+        </footer> 
     </body>
 </html>
